@@ -29,6 +29,12 @@ add a dependency on the Chisel library.
 
     $ cat build.sbt
     scalaVersion := "2.10.2"
+
+    resolvers ++= Seq(
+        "Sonatype Snapshots" at "http://oss.sonatype.org/content/repositories/snapshots",
+        "Sonatype Releases" at "http://oss.sonatype.org/content/repositories/releases"
+    )
+
     libraryDependencies += "edu.berkeley.cs" %% "chisel" % "2.0-SNAPSHOT"
 
 Edit the source files for your circuit
