@@ -9,15 +9,19 @@
         as a first step. Other changes will generate a compilation error.
         * Replace Reg(resetVal=x) by Reg(reset=x)
         * Replace Reg(){x} by Reg(x)
-        * Replace Mem(n){x} by Mem(n, x)
+        * Replace Mem(n){x} by Mem(x, n)
+        * Replace VecBuf(n){x} by VecBuf(x, n)
         * Replace Vec(n){x} by Vec.fill(n){x}
           to follow Scala standard libraryconventions
-        * Replace new FIFOIO {x} by  new Decoupled(x)
+        * Replace new FIFOIO {x} by  Decoupled(x)
         * Replace new Arbiter(n) {x} by new Arbiter(x, n)
         * Replace PIPEIO by Valid
+        * Replace new Queue(n){x} by new Queue(x, n)
         * Replace Component by Module
         * Replace UFix by UInt
         * Replace Fix by SInt
+        * Edit ioQueue to QueueIO
+        * Edit ioArbiter to ArbiterIO
         * Wrap module instantiation into a Module() call,
           as in replace new C() by Module(new C())
         * Update Scala compiler to 2.10
